syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Calculate {
    int32 first_number = 1;
    int32 second_number = 2;
    enum Operation {
        SUM = 0;
        SUB = 1;
        MUL = 2;
        DIV = 3;
    }
    Operation operation = 3;
}

message CalculateRequest {
    Calculate calculate = 1;
}

message CalculateResponse {
    string result = 1;
}

message DecomposeRequest {
    int32 number = 1;
}

message DecomposeResponse {
    int32 result = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double result = 1;
}

message MaximumRequest {
    int32 number = 1;
}

message MaximumResponse {
    int32 number = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double result = 1;
}

service CalculateService {

    rpc Execute(CalculateRequest) returns (CalculateResponse){};

    rpc DecomposePrimeNumber(DecomposeRequest) returns (stream DecomposeResponse) {};

    rpc Average(stream AverageRequest) returns (AverageResponse) {};

    rpc Maximum(stream MaximumRequest) returns (stream MaximumResponse) {};

    //Error Handling -> Throw excption if number is negative
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};


}